--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -10,7 +10,19 @@ services:
       RABBITMQ_DEFAULT_PASS: admin
     networks:
       - app_network
-
+  db_proyect:
+    image: mysql:9.2.0
+    environment:
+      MYSQL_DATABASE: 'proyecto'
+      MYSQL_USER: 'user'
+      MYSQL_PASSWORD: '12345'
+      MYSQL_ROOT_PASSWORD: '12345'
+    ports:
+      - '3306:3306'
+    volumes:
+      - mysql_data:/var/lib/mysql
+    networks:
+      - app_network 
   api_users:
     build: ./users
     ports:
@@ -29,20 +41,21 @@ services:
       DB_NAME: proyecto
       RABBITMQ_HOST: amqp://admin:admin@rabbitmq_eco
       PORT_EXPRESS: 3001
-  db_proyect:
-    image: mysql:9.2.0
-    environment:
-      MYSQL_DATABASE: 'proyecto'
-      MYSQL_USER: 'user'
-      MYSQL_PASSWORD: '12345'
-      MYSQL_ROOT_PASSWORD: '12345'
+  api_email:
+    build: ./email_test
     ports:
-      - '3306:3306'
+      - "3002:3002"
     volumes:
-      - mysql_data:/var/lib/mysql
+      - ./email_test:/app
+    depends_on:
+      - rabbitmq_eco
     networks:
-      - app_network  
-      
+      - app_network
+    environment:
+      EMAIL_USER: ejemplo@gmail.com
+      EMAIL_PASS: poner_emailpass
+      PORT_EXPRESS: 3002
+      RABBITMQ_HOST: amqp://admin:admin@rabbitmq_eco
 networks:
   app_network:
 volumes:
