--- a/Backend/client/package.json
+++ b/Backend/client/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "dependencies": {
     "amqplib": "^0.10.5",
+    "axios": "^1.8.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
