Corregciones de user
Principalmente para que al crear un client se le cree la cuenta, por medio de rabbit evitando perdidas de información

--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     networks:
       - config_app_network
     environment:
-      EMAIL_USER: ejemplo@gmail.com
-      EMAIL_PASS: poner_emailpass
+      EMAIL_USER: example@gmail.com
+      EMAIL_PASS: aaaaaa
       PORT_EXPRESS: 3002
       RABBITMQ_HOST: amqp://admin:admin@rabbitmq_eco
   api_client:
