Implementacion de products
La funcionalidad de eliminar no esta disponible

--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     networks:
       - config_app_network
     environment:
-      EMAIL_USER: example@gmail.com
-      EMAIL_PASS: aaaaaa
+      EMAIL_USER: goku43210@gmail.com
+      EMAIL_PASS: ycbcaolujkdmegsw
       PORT_EXPRESS: 3002
       RABBITMQ_HOST: amqp://admin:admin@rabbitmq_eco
   api_client:
@@ -36,6 +36,19 @@ services:
       DB_NAME: proyecto
       RABBITMQ_HOST: amqp://admin:admin@rabbitmq_eco
       PORT_EXPRESS: 3003
+  api_products:
+    build: ./products
+    ports:
+      - "3004:3004"
+    networks:
+      - config_app_network
+    environment:
+      DB_HOST: db_proyect
+      DB_USER: user
+      DB_PASSWORD: 12345
+      DB_NAME: proyecto
+      RABBITMQ_HOST: amqp://admin:admin@rabbitmq_eco
+      PORT_EXPRESS: 3004
 networks:
   config_app_network:
     external: true
