--- a/Backend/ebs-service/dockerfile
+++ b/Backend/ebs-service/dockerfile
@@ -1,5 +1,18 @@
-FROM openjdk:8-jdk-alpine3.9
+# Build stage
+FROM maven:3.9.0-eclipse-temurin-17 AS builder
+
 WORKDIR /app
-COPY target/*.jar app.jar
-EXPOSE 3500
-ENTRYPOINT [ "java", "-jar", "app.jar" ]
+COPY pom.xml .
+COPY src ./src
+
+RUN mvn clean package -DskipTests
+
+# Final stage
+FROM eclipse-temurin:17-jre-alpine
+
+WORKDIR /app
+COPY --from=builder /app/target/ebs-service-0.0.1-SNAPSHOT.jar app.jar
+
+EXPOSE 8081
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
